# src/controllers/user.controller.ts
@@ -1,10 +1,12 @@
-import { Get, Route, Tags, Post, Body, Path } from "tsoa";
+import { Get, Route, Tags, Post, Put, Delete, Body, Path } from "tsoa";
 import { User } from "../models";
 import {
   getUsers,
   createUser,
   IUserPayload,
   getUser,
+  updateUser,
+  deleteUser,
 } from "../repositories/user.repository";
 
 @Route("users")
@@ -23,5 +25,15 @@ export default class UserController {
   @Get("/:id")
   public async getUser(@Path() id: string): Promise<User | null> {
     return getUser(Number(id));
+  }
+
+  @Put("/:id")
+  public async updateUser(@Path() id: string, @Body() body: IUserPayload): Promise<User | null> {
+    return updateUser(Number(id), body);
+  }
+
+  @Delete("/:id")
+  public async deleteUser(@Path() id: string): Promise<User | null> {
+    return deleteUser(Number(id));
   }
 }
